# Devtober

./: .gitignore  DevTober.csproj.old  DevTober.sln  README.md  icon.svg.import  main.tscn  project.godot
.rust/: Cargo.toml
.rust/src/: bvh_node.rs  data_handler.rs  lib.rs  mass_render.rs  nav_agent.rs  rand_vector.rs
Scenes/: main.tscn
Scripts/: BVHNode.cs  BVHNode.cs.uid  BVHNode.gd  BVHNode.gd.old  BVHNode.gd.uid  BoidHandler.gd  BoidHandler.gd.uid  DataHandler.gd  DataHandler.gd.uid  MeshHandler.gd  MeshHandler.gd.uid  MultiMeshObject.gd  MultiMeshObject.gd.uid  PhysicsHandler.gd  PhysicsHandler.gd.uid  SpatialHandler.gd  SpatialHandler.gd.uid  UIHandler.gd  UIHandler.gd.uid  boidSpawner.gd  boidSpawner.gd.uid
addons/gdUnit4/: GdUnitRunner.cfg  plugin.gd.uid
addons/gdUnit4/src/: Comparator.gd.uid  Fuzzers.gd.uid  GdUnitArrayAssert.gd.uid  GdUnitAssert.gd.uid  GdUnitAwaiter.gd.uid  GdUnitBoolAssert.gd.uid  GdUnitConstants.gd.uid  GdUnitDictionaryAssert.gd.uid  GdUnitFailureAssert.gd.uid  GdUnitFileAssert.gd.uid  GdUnitFloatAssert.gd.uid  GdUnitFuncAssert.gd.uid  GdUnitGodotErrorAssert.gd.uid  GdUnitIntAssert.gd.uid  GdUnitObjectAssert.gd.uid  GdUnitResultAssert.gd.uid  GdUnitSceneRunner.gd.uid  GdUnitSignalAssert.gd.uid  GdUnitStringAssert.gd.uid  GdUnitTestSuite.gd.uid  GdUnitTuple.gd.uid  (+2 more)
addons/simple_multimesh/: plugin.gd.uid
shader/: trail.gdshader.uid  trail.tres
test/Scripts/: BoidHandlerTest.gd  BoidHandlerTest.gd.uid  DataHandlerTest.gd  DataHandlerTest.gd.uid  MeshHandlerTest.gd.uid  PhysicsHandlerTest.gd  PhysicsHandlerTest.gd.uid
(+175 files in other folders)
