[package]
name = "rust_gdextension"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]

[dependencies]
bvh = "0.11.0"
flamegraph = "0.6.9"
godot = "0.3.1"
nalgebra = "0.34.1"
rand = "0.9.2"
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "vector_ops"
harness = false
path = "src/benchmark.rs"
